src/objects/Object_Field_Mapper__c.object
<CustomObject>
    <description>Maintains a mapping of required field API names against the relevant Object API name.</description>
    <fields>
        <fullName>Destination_Field_Name__c</fullName>
        <description>API Name of the Destination Field</description>
        <label>Destination Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <description>API Name of the Destination Object</description>
        <label>Destination Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field_Name__c</fullName>
        <description>API Name of the Source Field</description>
        <label>Source Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <description>API Name of the Source Object</description>
        <label>Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Object Field Mapper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Destination_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FM-{0000000}</displayFormat>
        <label>Field Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Field Mappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>